--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Aquí empieza el encabezado principal que se mantendrá en todas las páginas del sitio web -->
     <header>
       <div class="logo">
-        <img src="C:\webces\imagenes\logo1.png" alt="">
+        <img src="logo1.png" alt="">
         <!-- <h1>Encabezado Ces12</h1> -->
         <h2 class="logonombre" 
         style="border: 5px;"> Nombre Cia </h2>
