--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </div>
        <!-- //para llenar con java -->
       <nav>
-        <a href="" class="nav-link">A...</a>
         <a href="" class="nav-link">B...</a>
         <a href="" class="nav-link">C...</a>
+        <a href="" class="nav-link">D...</a>
       </nav>
       <!-- <div id="datoid">
         <h2>Título del artículo0</h2>
